fix: modif bubble spacing on other stats then points

--- a/projet-dataviz/src/app/components/beeswarm-chart/beeswarm-chart/beeswarm-chart.component.css
+++ b/projet-dataviz/src/app/components/beeswarm-chart/beeswarm-chart/beeswarm-chart.component.css
@@ -5,4 +5,5 @@
     display: flex;
     flex-direction: row;
     align-items: baseline;
+    gap: 10px;
 }
